# OpenBidKit_Yibiao

./: .gitignore  AGENTS.md  README.en.md  README.md  findings.md  progress.md  task_plan.md
.github/workflows/: release.yml
analytics/: README.md  逻辑梳理.md
analytics/dashboard/: index.html
analytics/dashboard/public/: index.html  styles.css
analytics/scripts/: backfill-analytics-stats.mjs  deploy-if-changed.mjs  setup-analytics-storage.mjs
analytics/worker/: package.json  wrangler.jsonc
analytics/worker/analytics-migrations/: 0001_create_analytics_rollups.sql  0001_create_stats_schema.sql
analytics/worker/src/: constants.js  index.js
backend/: pyproject.toml  run.py
backend/app/services/: word_export_service.py
backend/app/utils/prompts/: content_prompts.py
client/: package-lock.json  package.json  开发说明.md
client/doc/: sqlite改造方案.md  技术方案.md  统计改造计划.md  设置页.md
client/electron/: main.cjs  preload.cjs
client/electron/ipc/: aiIpc.cjs  configIpc.cjs  exportIpc.cjs  fileIpc.cjs  index.cjs  taskIpc.cjs  workspaceIpc.cjs
client/src/: App.tsx  styles.css  vite-env.d.ts
sql/: technical_plan_schema.sql
tools/: run-mineru-accurate-demo.ps1  run-mineru-agent-demo.ps1  run-node-demo.ps1  run-python-docker-demo.ps1
tools/Doc2MarkdownService/: Dockerfile  README.md  docker-compose.yml  requirements.txt
tools/doc2markdown-node/: .gitignore  README.md  package-lock.json  package.json
tools/mineru-accurate-demo/: .gitignore  README.md  package-lock.json  package.json
tools/mineru-agent-demo/: .gitignore  README.md  package-lock.json  package.json
(+104 files in other folders)
