[project]
name = "openbidkit-yibiao"
version = "0.1.0"
description = "OpenBidKit Yibiao Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "openai==1.106.1",
    "python-docx==1.2.0",
    "PyPDF2==3.0.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "aiofiles==24.1.0",
    "anyio>=4,<5",
    "pdfplumber==0.11.7",
    "pymupdf==1.26.4",
    "docx2python==3.5.0",
    "aiohttp==3.10.11",
    "Pillow==10.4.0",
]

[project.scripts]
start = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
